--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+</head>
+
 <body>
+
 
 <h1>My First Heading</h1>
 
 <p>My first paragraph.</p>
+
+
+  <div id="box">
+    Lorem ipsum dolor sit
+  </div>
 
 </body>
 </html>
