--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
     Lorem ipsum dolor sit
   </div>
 
+<button type="button" id="my_button">Click me!</button>
+
+<script src="code.js"></script>
 </body>
 </html>
